--- a/assets/style/cloud-icon.wxss
+++ b/assets/style/cloud-icon.wxss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'c-iconfont';
-  src: url('//at.alicdn.com/t/font_387653_syb7a84fe8zrggb9.eot');
-  src: url('//at.alicdn.com/t/font_387653_syb7a84fe8zrggb9.eot?#iefix') format('embedded-opentype'),
-         url('//at.alicdn.com/t/font_387653_syb7a84fe8zrggb9.woff') format('woff'),
-         url('//at.alicdn.com/t/font_387653_syb7a84fe8zrggb9.ttf') format('truetype'),
-         url('//at.alicdn.com/t/font_387653_syb7a84fe8zrggb9.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_387653_z23zvc7mxtvxtj4i.eot');
+  src: url('//at.alicdn.com/t/font_387653_z23zvc7mxtvxtj4i.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_387653_z23zvc7mxtvxtj4i.woff') format('woff'),
+  url('//at.alicdn.com/t/font_387653_z23zvc7mxtvxtj4i.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_387653_z23zvc7mxtvxtj4i.svg#iconfont') format('svg');
 }
 
 .c-iconfont {
@@ -13,6 +13,9 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.icon-mingpiandibudaohanggengduo:before {
+  content: "\e88b";
 }
 
 .icon-zitijian:before {
