--- a/pages/doc-class-list/doc-class-list.wxml
+++ b/pages/doc-class-list/doc-class-list.wxml
@@ -3,7 +3,7 @@
     <image mode="aspectFill" class="top-image" src="http://class.m.imooc.com/static/classwap/static/img/index/head.png"></image>
   </view>
   <view class="list">
-    <view class="item view-bg" wx:for="{{doc_list}}" wx:key="{{item}}" bindtap="go_info" data-id="{{item.id}}">
+    <view class="item view-bg" wx:for="{{data.data}}" wx:key="{{item}}" bindtap="go_info" data-id="{{item.id}}">
       <view class="item-main border-b" hover-class="view-hover-class">
         <view class="item-l">
           <image mode="aspectFill" class="list-image" src="{{item.cover_url}}"></image>
@@ -21,34 +21,9 @@
       </view>
     </view>
 
-    <view class="article-list">
-      <block wx:for="{{data.data}}" wx:key="{{item}}">
-        <view class="list-item">
-          <view class="item-mian" bindtap="go_page" data-id="{{item.id}}">
-            <view class="item-left">
-              <text decode="true" class="item-title">{{item.title}}</text>
-              <text wx:if="{{item.cover == null}}" decode="true" class="item-desc">{{item.desc}}</text>
-              <text wx:else decode="true" class="item-desc item-desc-a">{{item.desc}}</text>
-            </view>
-            <view class="item-right" wx:if="{{item.cover !== null}}">
-              <image mode="aspectFill" src="{{item.cover_url}}" class="item-cover"></image>
-            </view>
-          </view>
-          <view class="item-tag">
-            <block wx:for="{{item.tags}}" wx:key="{{item}}">
-              <navigator wx:if="{{tag_id == 0}}" open-type="navigate" url="../article/article?tag_id={{item.id}}&tag_name={{item.name}}" class="tag">{{item.name}}</navigator>
-              <navigator wx:else open-type="redirect" url="../article/article?tag_id={{item.id}}&tag_name={{item.name}}" class="tag">{{item.name}}</navigator>
-            </block>
-          </view>
-
-        </view>
-        <view class="border-b"></view>
-      </block>
-    </view>
-
     <view class="no_more" wx:if="{{more}}">{{more_data}}</view>
     <view class="no_more" wx:if="{{no_more}}">{{more_data}}</view>
-    <view class="no_data" wx:if="{{no_data && doc_list.length<=0}}">
+    <view class="no_data" wx:if="{{no_data}}">
       <image class="no_data_icon" src="../../assets/images/no_data.png"></image>
       <view class="no_data_text">抱歉，当前分类暂未相关文档！</view>
     </view>
