--- a/pages/doc-page/doc-page.wxss
+++ b/pages/doc-page/doc-page.wxss
@@ -8,13 +8,20 @@
 
 /**主题配色（深色样式）**/
 @import '/towxml/style/theme/dark.wxss';
-
-
 @import '../doc-menu/doc-menu.wxss';
-
+.pbg{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
 .page-main {
   margin: 0;
   padding: 0 0 100rpx 0;
+  position: relative;
+  z-index: 2;
 }
 
 .code {
@@ -56,6 +63,7 @@
   width: 100%;
   height: 100rpx;
   display: flex;
+  z-index: 9;
 }
 
 .bar-item {
@@ -66,6 +74,24 @@
   flex-grow: 1;
   align-items: center;
   justify-content: center;
+}
+
+.menu-box {
+  flex-grow: 3;
+  display: flex;
+}
+
+.menu-box .go-btn {
+  flex-shrink: 0;
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.go-btn .go-icon {
+  color: #fff;
+  font-size: 52rpx;
 }
 
 .bar-item text {
@@ -88,6 +114,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 998;
 }
 
 .set-f-l {
@@ -110,16 +137,30 @@
   font-size: 32rpx;
 }
 
-.page-menu{
+.page-menu {
   position: fixed;
   width: 562rpx;
-  background: #ffffff;
+  background: #fff;
   top: 0;
   bottom: 0rpx;
   right: 0;
-  box-shadow: -100rpx 0 160rpx rgba(0, 0, 0, 0.5); 
+  z-index: 999;
+  box-shadow: -100rpx 0 160rpx rgba(0, 0, 0, 0.5);
 }
 
-.select{
-  background: #dddddd;
+.select {
+  background: #ddd;
+}
+
+
+.dark {
+  
+  background-color: #000;
+}
+.dark .menu-title{
+color: #ddd;
+}
+
+.dark .select .menu-title{
+  color: #000000;
 }
