--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -26,18 +26,21 @@
   </view>
 
   <view class="class-doc" wx:for="{{doc_class_list}}" wx:key="{{item}}">
-    <view class="class-title">{{item.title}}</view>
+    <navigator class="class-title" url="../doc-class-list/doc-class-list?class_id={{item.id}}">
+      <text>{{item.title}}</text>
+      <text class="c-iconfont icon-aui-icon-more"></text>
+    </navigator>
     <view class="class-doc-list">
       <block wx:for="{{item.doc}}" wx:key="{{item}}">
         <view class="class-doc-list-item" data-id="{{item.id}}">
           <view class="class-doc-list-img-box">
             <navigator url="/pages/doc-info/doc-info?doc_id={{item.id}}">
               <image mode="aspectFill" class="class-doc-list-img-box-img" src="{{item.h_cover_url}}"></image>
-            
-            <text class="end-state" wx:if="{{false}}">已完成</text>
-            <view class="view-count">
-              <text class="view-count-text">{{item.view_count}}阅读</text>
-            </view>
+
+              <text class="end-state" wx:if="{{false}}">已完成</text>
+              <view class="view-count">
+                <text class="view-count-text">{{item.view_count}}阅读</text>
+              </view>
             </navigator>
           </view>
           <view class="class-doc-list-info-box">{{item.title}}</view>
